# bare-bones

./: .gitignore  CMakeLists.txt  boot.s  build.py  kernel.c  linker.ld  toolchain.cmake
isodir/boot/: Timberline
isodir/boot/grub/: grub.cfg
src/: CMakeLists.txt  grub.cfg  kernel.c  string.h  vga.c  vga.h
stdlib/: CMakeLists.txt
stdlib/stdmem/: CMakeLists.txt  stdmem.h
stdlib/stdstring/: CMakeLists.txt  stdstring.h
